--- a/web/css/reg.css
+++ b/web/css/reg.css
@@ -167,6 +167,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
     transition: background-color 0.3s ease;
 }
 
